--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,3 +60,26 @@ jobs:
       with:
         name: node-app
         path: ./NodeJS/react-express-azure-app-service-vscode/api
+
+  deploy:
+    permissions:
+      contents: none
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Development'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v3
+      with:
+        name: node-app
+
+    - name: 'Deploy to Azure WebApp'
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BE }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
