--- a/.github/workflows/forntend-appservice.yml
+++ b/.github/workflows/forntend-appservice.yml
@@ -1,10 +1,9 @@
 on:
   push:
     branches: [ "test-build" ]
-    paths: [
-      "NodeJS/react-express-azure-app-service-vscode/todo-app-react/**",
-      ".github/workflows/frontend-appservice.yml"
-    ]
+    paths: 
+      - "NodeJS/react-express-azure-app-service-vscode/todo-app-react/**"
+      - ".github/workflows/frontend-appservice.yml"
   workflow_dispatch:
 
 env:
@@ -38,6 +37,7 @@ jobs:
       working-directory: ./NodeJS/react-express-azure-app-service-vscode/todo-app-react
       run: |
         npm install
+        npm run build
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v3
