--- a/.github/workflows/forntend-appservice.yml
+++ b/.github/workflows/forntend-appservice.yml
@@ -45,26 +45,26 @@ jobs:
         name: node-app-fe
         path: ./NodeJS/react-express-azure-app-service-vscode/todo-app-react/dist
   
-    # deploy:
-    #   permissions:
-    #     contents: none
-    #   runs-on: ubuntu-latest
-    #   needs: build
-    #   environment:
-    #     name: 'Development'
-    #     url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-  
-    #   steps:
-    #   - name: Download artifact from build job
-    #     uses: actions/download-artifact@v3
-    #     with:
-    #       name: node-app
-  
-    #   - name: 'Deploy to Azure WebApp'
-    #     id: deploy-to-webapp
-    #     uses: azure/webapps-deploy@v2
-    #     with:
-    #       app-name: todo-app-bkend
-    #       publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BE }}
-    #       package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-  
+  deploy:
+    permissions:
+      contents: none
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Development'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+    - name: Download artifact from build job
+      uses: actions/download-artifact@v3
+      with:
+        name: node-app
+
+    - name: 'Deploy to Azure WebApp'
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: todo-app-frontend
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+
