--- a/.github/workflows/forntend-appservice.yml
+++ b/.github/workflows/forntend-appservice.yml
@@ -58,7 +58,7 @@ jobs:
     - name: Download artifact from build job
       uses: actions/download-artifact@v3
       with:
-        name: node-app
+        name: node-app-fe
 
     - name: 'Deploy to Azure WebApp'
       id: deploy-to-webapp
