--- a/.github/workflows/forntend-appservice.yml
+++ b/.github/workflows/forntend-appservice.yml
@@ -14,7 +14,7 @@ permissions:
     contents: read
 
 jobs:
-  build:
+  build_and_deploy:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -29,36 +29,10 @@ jobs:
         cache: 'npm'
         cache-dependency-path: ./NodeJS/react-express-azure-app-service-vscode/todo-app-react/package-lock.json
     
-    - name: check working folder
-      working-directory: ./NodeJS/react-express-azure-app-service-vscode/todo-app-react
-      run: pwd
-    
     - name: npm install, build, and test
-      working-directory: ./NodeJS/react-express-azure-app-service-vscode/todo-app-react
       run: |
         npm install
         npm run build
-
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v3
-      with:
-        name: node-app-fe
-        path: ./NodeJS/react-express-azure-app-service-vscode/todo-app-react/dist
-  
-  deploy:
-    permissions:
-      contents: none
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Development'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v3
-      with:
-        name: node-app-fe
 
     - name: 'Deploy to Azure WebApp'
       id: deploy-to-webapp
@@ -66,5 +40,4 @@ jobs:
       with:
         app-name: todo-app-frontend
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_FE }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-
+        package: ./NodeJS/react-express-azure-app-service-vscode/todo-app-react/dist
