--- a/.github/workflows/backend-appservice.yml
+++ b/.github/workflows/backend-appservice.yml
@@ -21,8 +21,8 @@ on:
   push:
     branches: [ "test-build" ]
     paths: [
-      "NodeJS/react-express-azure-app-service-vscode/api/**",
-      ".github/workflows/main.yml"
+      "./NodeJS/github-actions/react-express/api/**",
+      ".github/workflows/**"
     ]
   workflow_dispatch:
 
@@ -34,11 +34,11 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-    defaults:
+    defaults: 
       run:
-        working-directory: ./NodeJS/react-express-azure-app-service-vscode/api
+        working-directory: ./NodeJS/github-actions/react-express/api
     steps:
     - uses: actions/checkout@v4
     
@@ -47,37 +47,11 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
-        cache-dependency-path: ./NodeJS/react-express-azure-app-service-vscode/api/package-lock.json
-    
-    - name: check working folder
-      working-directory: ./NodeJS/react-express-azure-app-service-vscode/api
-      run: pwd
+        cache-dependency-path: ./NodeJS/github-actions/react-express/api/package-lock.json
     
     - name: npm install, build, and test
-      working-directory: ./NodeJS/react-express-azure-app-service-vscode/api
       run: |
         npm install
-
-    - name: Upload artifact for deployment job
-      uses: actions/upload-artifact@v3
-      with:
-        name: node-app
-        path: ./NodeJS/react-express-azure-app-service-vscode/api
-
-  deploy:
-    permissions:
-      contents: none
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Development'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-    - name: Download artifact from build job
-      uses: actions/download-artifact@v3
-      with:
-        name: node-app
 
     - name: 'Deploy to Azure WebApp'
       id: deploy-to-webapp
@@ -85,4 +59,4 @@ jobs:
       with:
         app-name: todo-app-bkend
         publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BE }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        package: ./NodeJS/github-actions/react-express/api
