--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -36,7 +36,8 @@ jobs:
         with:
           push: true
           tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
-          file: ./NodeJS/react-express-azure-app-service-docker/docker-compose.yml
+          context: ./NodeJS/react-express-azure-app-service-docker/api
+          file: dockerfile
 
   deploy:
     permissions:
