--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -37,7 +37,7 @@ jobs:
           push: true
           tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
           context: ./NodeJS/react-express-azure-app-service-docker/api
-          file: dockerfile
+          file: ./NodeJS/react-express-azure-app-service-docker/api/dockerfile
 
   deploy:
     permissions:
