--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -56,23 +56,10 @@ jobs:
           context: ./NodeJS/react-express-azure-app-service-docker/api
           file: ./NodeJS/react-express-azure-app-service-docker/api/dockerfile
 
-  deploy:
-    permissions:
-      contents: none
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Development'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Lowercase the repo name and username
-        run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
-
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: ${{ env.AZURE_WEBAPP_NAME }}
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          images: 'ghcr.io/${{ env.REPO }}:${{ github.sha }}'
+          app-name: todo-docker-compose
+          publish-profile: ${{ secrets.TODO_DOCKER_COMPOSE }}
+          configuration-file: ./NodeJS/github-actions/react-express-compose/docker-compose.yml
