--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -64,6 +64,13 @@ jobs:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: replace image version in compose
+        shell: pwsh
+        run: |
+          $composePath = ./NodeJS/github-actions/react-express-compose/docker-compose.yml
+          ((Get-Content -path $composePath -Raw) -replace 'latest','${{ github.sha }}') | Set-Content -Path $composePath
+          Get-Content -path $composePath -Raw
           
       - name: Azure CLI script
         uses: azure/cli@v2
