--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -6,6 +6,9 @@ env:
 on:
   push:
     branches: [ "docker-compose" ]
+    paths:
+      - "./NodeJS/github-actions/react-express-compose/**"
+      - ".github/workflows/azure-container-webapp.yml"
   workflow_dispatch:
 
 permissions:
