--- a/.github/workflows/backend-appservice.yml
+++ b/.github/workflows/backend-appservice.yml
@@ -2,20 +2,21 @@ on:
   push:
     branches: [ "main" ]
     paths:
-      - "./NodeJS/github-actions/react-express/api/**"
+      - "NodeJS/github-actions/react-express/api/**"
       - ".github/workflows/**"
   workflow_dispatch:
 
 env:
-  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '20.x'                # set this to the node version to use
 
 permissions:
   contents: read
+  id-token: write
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    environment: Production
     defaults: 
       run:
         working-directory: ./NodeJS/github-actions/react-express/api
@@ -33,10 +34,16 @@ jobs:
       run: |
         npm install
 
+    - name: Azure CLI Login
+      uses: azure/login@v2
+      with:
+        client-id: ${{ secrets.AZURE_CLIENT_ID }}
+        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+        subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
     - name: 'Deploy to Azure WebApp'
       id: deploy-to-webapp
       uses: azure/webapps-deploy@v2
       with:
         app-name: todo-app-bkend
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE_BE }}
         package: ./NodeJS/github-actions/react-express/api
