add url in environement

--- a/.github/workflows/backend-appservice.yml
+++ b/.github/workflows/backend-appservice.yml
@@ -3,7 +3,7 @@ on:
     branches: [ "main" ]
     paths:
       - "NodeJS/github-actions/react-express/api/**"
-      - ".github/workflows/**"
+      - ".github/workflows/backend-appservice.yml"
   workflow_dispatch:
 
 env:
