--- a/.github/workflows/frontend-appservice.yml
+++ b/.github/workflows/frontend-appservice.yml
@@ -9,12 +9,11 @@ on:
   workflow_dispatch:
 
 env:
-    AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
     NODE_VERSION: '20.x'                # set this to the node version to use
   
 permissions:
     contents: read
-    id-token: write
+    id-token: write # for azure login
 
 jobs:
   build_and_deploy:
