--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -1,7 +1,8 @@
 name: Build and deploy a container to an Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: your-app-name  # set this to the name of your Azure Web App
+  AZURE_WEBAPP_NAME: todo-docker-compose  # set this to the name of your Azure Web App
+  RESOURCE_GROUP: api-app-54_group        # set this to the name of your Azure resource group
 
 on:
   push:
@@ -41,7 +42,9 @@ jobs:
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           push: true
-          tags: ghcr.io/${{ env.REPO }}/nginx-proxy:${{ github.sha }}
+          tags: |
+            ghcr.io/${{ env.REPO }}/nginx-proxy:${{ github.sha }}
+            ghcr.io/${{ env.REPO }}/nginx-proxy:latest
           context: ./NodeJS/github-actions/react-express-compose/proxy
           file: ./NodeJS/github-actions/react-express-compose/proxy/dockerfile
 
@@ -49,7 +52,9 @@ jobs:
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           push: true
-          tags: ghcr.io/${{ env.REPO }}/react-todo-frontend:${{ github.sha }}
+          tags: |
+            ghcr.io/${{ env.REPO }}/react-todo-frontend:${{ github.sha }}
+            ghcr.io/${{ env.REPO }}/react-todo-frontend:latest
           context: ./NodeJS/github-actions/react-express-compose/todo-app-react
           file: ./NodeJS/github-actions/react-express-compose/todo-app-react/dockerfile
 
@@ -80,4 +85,4 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
-            az webapp config container set --resource-group api-app-54_group --name todo-docker-compose --multicontainer-config-type compose --multicontainer-config-file ./NodeJS/github-actions/react-express-compose/docker-compose.yml
+            az webapp config container set --resource-group ${{ env.RESOURCE_GROUP }} --name ${{ env.AZURE_WEBAPP_NAME }} --multicontainer-config-type compose --multicontainer-config-file ./NodeJS/github-actions/react-express-compose/docker-compose.yml
