--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -1,7 +1,7 @@
 name: Build and deploy a container to an Azure Web App
 
 env:
-  AZURE_WEBAPP_NAME: todo-docker-compose-d5eugueucxepchax.eastasia-01  # set this to the name of your Azure Web App
+  AZURE_WEBAPP_NAME: todo-docker-compose  # set this to the name of your Azure Web App
   RESOURCE_GROUP: todo-docker-compose_group       # set this to the name of your Azure resource group
 
 on:
